--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -324,6 +324,7 @@ div.bottom-page-links{
 
   ul{
     list-style: none;
+    padding: 0;
     li{
       display: inline;
     }
